--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.7.4",
     "emailjs-com": "^3.2.0",
     "framer-motion": "^11.3.24",
     "react": "^18.3.1",
@@ -22,6 +23,7 @@
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.12",
+    "sweetalert2": "^11.12.4",
     "swiper": "^11.1.9",
     "web-vitals": "^2.1.4"
   },
